typesafe_builder_derive/tests/ui/2.stderr
error[E0599]: no method named `build` found for struct `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/2.rs:18:10
   |
7  |       #[derive(Builder)]
   |                ------- method `build` not found for this struct
...
16 |       let user = UserBuilder::new()
   |  ________________-
17 | |         .with_name("Alice".to_string())
18 | |         .build();
   | |         -^^^^^ method not found in `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
   | |_________|
   |
   |
   = note: the method was found for
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled>`
